# GitDemo

./: CMakeLists.txt  create.sh  main.cpp
git/: git.cpp
git/include/: git.hpp
git/lib/: libgit2.so.0.99.0
git/lib/pkgconfig/: libgit2.pc
include/: Auto_Head.h
system/include/: Log.hpp  system.h
